# samp-New-Me

./: build.gradle.kts
.github/workflows/: build.yml
app/: build.gradle  google-services.json
app/src/main/cpp/multiplayer/: CMakeLists.txt  CSettings.cpp  SkyBox.cpp  playertags.cpp
app/src/main/cpp/multiplayer/app/: app_game.cpp
app/src/main/cpp/multiplayer/game/: BulletTrace.cpp  BulletTrace.h  BulletTraces.cpp  BulletTraces.h  Camera.cpp  Camera.h  Clouds.cpp  Mirrors.cpp  Occluder.h  PathFind.cpp  PathFind.h  Pickup.cpp  Streaming.cpp  TimeCycle.cpp  TimeCycle.h  VehicleSamp.cpp  WaterLevel.cpp  WaterLevel.h  Weapon.cpp  World.h  World_Helper.cpp  aimstuff.cpp  common.h  game.cpp  hooks.cpp  pad.cpp  splashscreen.cpp
app/src/main/cpp/multiplayer/game/Entity/: Entity.cpp  Entity.h  Physical.h
app/src/main/cpp/multiplayer/game/Entity/Vehicle/: Vehicle.cpp  Vehicle.h
app/src/main/cpp/multiplayer/game/Fx/: VehicleNeon.cpp
app/src/main/cpp/multiplayer/game/Shadow/: RealTimeShadow.cpp  RealTimeShadowManager.cpp  RealTimeShadowManager.h  ShadowCamera.h  Shadows.cpp  Shadows.h
app/src/main/cpp/multiplayer/net/: AudioStreamPool.cpp  localplayer.cpp
app/src/main/java/com/russia/launcher/ui/activity/: LoaderActivity.kt  SplashActivity.kt
